# playerproject

./: .gitignore  CMakeLists.txt  Makefile  README.md  basic_window.c  main.c
comp/: buttons.xcf
src/: controls.c  controls.h  dirutils.c  dirutils.h  dirwindow.c  dirwindow.h  main.h  playlist.c  playlist.h  plutils.c  plutils.h  tt_window.c  tt_window.h
